--- a/app/views/cuaderno_controles_revisiones/show.html.erb
+++ b/app/views/cuaderno_controles_revisiones/show.html.erb
@@ -26,13 +26,14 @@
 
 <%= form_for(@cuaderno_control_revision, :html => { :class => "ui-body ui-body-c" }) do |f| %>
   <% if @cuaderno_control_revision.revisado == 0 %>
-    <% if can? :update, @cuaderno_control_revision %>
+    
+    <% if can? :update, @cuaderno_control_revision && current_user.perfil_id != 4 %>
       <div class="field">
         <%= f.hidden_field :revisado, :value => 1 %>
         <%= f.hidden_field :persona_vinculada_id, :value => PersonaVinculada.logueado(current_user.usuario).first.id %>
         <%= f.hidden_field :usuario, :value => current_user.usuario %>
       </div>
-
+      
       <div class="field">
         Observaciones<br />
         <%= f.text_area :observaciones %>
