--- a/app/views/colegios/_form.html.erb
+++ b/app/views/colegios/_form.html.erb
@@ -44,7 +44,11 @@
   <div class="field">
     Notificar inasistencia<br />
     <%= collection_select(:colegio, :notificar_inasistencia, ListaValor.where("tabla=10"), :item, :descripcion, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true", :required => "required"}) %>
-  </div>  
+  </div>
+  <div class="field">
+    Crear usuarios para alumnos a partir del grado (*)<br />
+    <%= collection_select(:colegio, :grado_usuario, Grado.where("anio_escolar_id = ? and nivel = 1", anio_escolar.id).order("grado"), :grado, :grado_nivel, {:prompt => ':: Seleccione ::'}, {"data-mini" => "true", :required => "required"}) %>
+  </div>
   <div class="field">
     Estado<br />
     <select <%= f.number_field :estado, "data-role" => "slider", "data-mini" => "true" %> >
