--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -11,7 +11,7 @@
       </li>
 
       <% if [1,2,3,4].include? current_user.perfil_id %>
-        <% if [1,3].include? current_user.perfil_id %>
+        <% if [1,3,5].include? current_user.perfil_id %>
           <li><a href="<%= tipos_eventos_path %>">Configurar</a></li>
         <% end %>
         
@@ -97,29 +97,29 @@
         <li><a href="<%= permisos_path %>">Permisos</a></li>
         <li><a href="<%= perfiles_path %>">Perfiles</a></li>
         <li><a href="<%= usuarios_path %>">Usuarios</a></li>
-        <li><a href="<%= crearusuarios_path %>">Crear masivamente usuarios y notificarlos por correo</a></li>
+        <li><a href="<%= crearusuarios_path %>">Creacion masiva de usuarios</a></li>
       <% end %>
         
-        
-       <% if [1,2,3].include? current_user.perfil_id %>        
+      
+       <% if [1,2,3,4,5].include? current_user.perfil_id %>
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Notas
         </li>
-        <% if [1,3].include? current_user.perfil_id %>
+        <% if [1,3,5].include? current_user.perfil_id %>
           <li><a href="<%= cargar_notas_path %>">Cargar</a></li>
         <% end %>
           
         <li><a href="<%= notas_path %>">Consultar</a></li>
       <% end %> 
         
-      <% if [1,2,3].include? current_user.perfil_id %> 
+      <% if [1,2,3,4].include? current_user.perfil_id %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Mi cuenta
         </li>
         <li><a href="<%= cambiar_clave_path(:id => current_user.id) %>">Cambiar clave</a></li>
       <% end %>
         
-      <% if current_user.perfil_id == 1 %> 
+      <% if [1,5].include? current_user.perfil_id %> 
         <li data-role="list-divider" data-icon="false" data-mini="true">
           Administracion Colegio
         </li>
