--- a/app/views/perfiles_permisos/_form.html.erb
+++ b/app/views/perfiles_permisos/_form.html.erb
@@ -22,8 +22,8 @@ Permisos:
   <%#*</div>%>
   <%= f.hidden_field :perfil_id %>
   
-  <div style="width: 310px; clear: left; float: left">
-    <%= collection_select(:perfil_permiso, :permiso_id, Permiso.order("subject_class, action"), :id, :detalle, {:prompt => ':: Seleccione ::' }, {"data-mini" => "true"}) %>
+   <div style="width: 310px; clear: left; float: left">
+    <%= collection_select(:perfil_permiso, :permiso_id, Permiso.where("permisos.id not in (select permiso_id from perfiles_permisos where perfil_id = ?)", @perfil.id).order("subject_class, action"), :id, :detalle, {:prompt => ':: Seleccione ::' }, {"data-mini" => "true"}) %>
   </div>
   <div style="float: left">
     <%= f.submit "", "data-inline" => "true", "data-theme" => "a", "data-icon" => "plus", "data-mini" => "true", "data-iconpos" => "notext" %>    
