--- a/app/views/alumnos/_form.html.erb
+++ b/app/views/alumnos/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@alumno, :html => { :class => "ui-body ui-body-c", :multipart => true, "data-ajax" => "false", "onSubmit" => "return validarFoto(document.personas, alumno[foto]);", "name" => "personas" }) do |f| %>
+<%= nested_form_for(@alumno, :html => { :class => "ui-body ui-body-c", :multipart => true, "data-ajax" => "false", "onSubmit" => "return validarFoto(document.personas, alumno[foto]);", "name" => "personas" }) do |f| %>
   <% if @alumno.errors.any? %>
     <div id="error_explanation" data-role="header" data-theme="e">
       <h2><%= pluralize(@alumno.errors.count, "error") %> impidieron que se grabe el registro:</h2>
@@ -73,6 +73,13 @@
         <%= f.hidden_field :usuario_nom, :value => current_user.usuario %>
     </div>
   </div>
+
+
+  <%= f.fields_for :alumnos_personas_vinculadas do |apv| %>
+    <%= render "alumnos_personas_vinculadas_fields", :f => apv %>
+  <% end %>
+  <p><%= f.link_to_add "Agregar vínculo con persona", :alumnos_personas_vinculadas %></p>
+
   <div class="actions">
     <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
   </div>
