--- a/app/views/tipos_eventos/_form.html.erb
+++ b/app/views/tipos_eventos/_form.html.erb
@@ -38,12 +38,18 @@
                 <option value = 1 <% if @tipo_evento.cuaderno_control == 1 %> selected <%end%> >Si</option>
     </select>
   </div>
+  <div data-role="fieldcontain">
+    Ingreso obligatorio de fecha programada:<br />
+    <select <%= f.number_field :obligatorio_fecha, "data-role" => "slider", "data-mini" => "true" %> >
+                <option value = 0 <% if @tipo_evento.obligatorio_fecha == 0 %> selected <%end%> >No</option>
+                <option value = 1 <% if @tipo_evento.obligatorio_fecha == 1 %> selected <%end%> >Si</option>
+    </select>
+  </div>
   <div class="field">
     <%= f.hidden_field :usuario, :value => current_user.usuario %>
   </div>
-    
-  <div class="actions">
-    <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
-  </div>
+</div>
+<div class="actions">
+  <%= f.submit "Grabar", "data-inline" => "true", "data-theme" => "a", "data-icon" => "check", "data-mini" => "true" %>
 </div>
 <% end %>
