--- a/app/views/cuaderno_controles_eventos/index.html.erb
+++ b/app/views/cuaderno_controles_eventos/index.html.erb
@@ -14,7 +14,7 @@
       <% else %>
         <% alumno = params[:alumno_id] %>
       <% end %>
-
+      
       <% persona = PersonaVinculada.logueado(current_user.usuario).first %>
       <%= form_tag(cuaderno_controles_eventos_path, {"data-ajax" => "false", "name" => "buscar", :method => :get}) do %>
         <div data-role="fieldcontain">
@@ -29,6 +29,7 @@
       <% else %>
         <% seccion = params[:seccion_id] %>
       <% end %>
+      <% alumno = "" %>
       
       <% if current_user.perfil_id == 3 && current_user.alcance_colegio == 0%>
         <% @secciones = Seccion.por_anioescolar_usuario(anio_escolar.id, current_user.id).order('grados.nivel','grados.grado','seccion') %>
@@ -50,11 +51,18 @@
     <div data-role="collapsible" data-collapsed="false">
       <h2>Pendientes</h2>
       <ul data-role="listview" data-filter="true">
-        <% @cuaderno_controles_eventos.pendiente(Time.now).each do |cuaderno_control_evento| %>
+        <% @cuaderno_controles_eventos.pendiente(Time.now).order("fecha_evento").each do |cuaderno_control_evento| %>
+          
+          <% if (current_user.perfil_id != 2 && current_user.perfil_id != 4) && !cuaderno_control_evento.alumno_id.nil? %>
+            <% alumno = cuaderno_control_evento.alumno_id.to_s %>
+          <% end %>
           <% if cuaderno_control_evento.alumno_id.nil? || cuaderno_control_evento.alumno_id == alumno.to_i %>
             <li data-filtertext="<%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion} #{cuaderno_control_evento.descripcion}" %>" >
                 <h3> <%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} - #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion}" %> </h3>
                 <p class="ui-li-desc"> <%= cuaderno_control_evento.descripcion%> </p>
+                <% if (current_user.perfil_id != 2 && current_user.perfil_id != 4) && !cuaderno_control_evento.alumno_id.nil? %>
+                    <p class="ui-li-desc"> <%= "Alumno: #{Alumno.find(cuaderno_control_evento.alumno_id).apellidos_nombres}"%> </p>
+                <%end%>
             </li>
           <% end  %>
         <% end  %>
@@ -64,11 +72,17 @@
     <div data-role="collapsible">
       <h2>Pasados</h2>
       <ul data-role="listview" data-filter="true">
-        <% @cuaderno_controles_eventos.pasado(Time.now).each do |cuaderno_control_evento| %>
+        <% @cuaderno_controles_eventos.pasado(Time.now).order("fecha_evento DESC").each do |cuaderno_control_evento| %>
+          <% if (current_user.perfil_id != 2 && current_user.perfil_id != 4) && !cuaderno_control_evento.alumno_id.nil? %>
+            <% alumno = cuaderno_control_evento.alumno_id.to_s %>
+          <% end %>
           <% if cuaderno_control_evento.alumno_id.nil? || cuaderno_control_evento.alumno_id == alumno.to_i %>
             <li data-filtertext="<%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion} #{cuaderno_control_evento.descripcion}" %>" >
                 <h3> <%= "#{cuaderno_control_evento.fecha_evento.strftime('%d/%m/%Y')} - #{TipoEvento.find(cuaderno_control_evento.tipo_evento_id).descripcion}" %> </h3>
                 <p> <%= "#{cuaderno_control_evento.descripcion}" %> </p>
+                <% if (current_user.perfil_id != 2 && current_user.perfil_id != 4) && !cuaderno_control_evento.alumno_id.nil? %>
+                    <p class="ui-li-desc"> <%= "Alumno: #{Alumno.find(cuaderno_control_evento.alumno_id).apellidos_nombres}"%> </p>
+                <%end%>
               </li>
             <% end  %>
           <% end  %>
