--- a/app/views/menus/main.html.erb
+++ b/app/views/menus/main.html.erb
@@ -151,8 +151,7 @@
         <li><a href="<%= cargar_vinculos_path %>">Cargar vínculos</a></li>
         <li><a href="<%= cargar_grados_secciones_path %>">Cargar grados y secciones</a></li>
         <li><a href="<%= anios_escolares_path %>">Años escolares</a></li>
-        <li><a href="<%= grados_path %>">Grados</a></li>
-        <li><a href="<%= secciones_path %>">Secciones</a></li>
+        <li><a href="<%= grados_path %>">Grados y secciones</a></li>
         <li><a href="<%= alumnos_path %>">Alumnos</a></li>
         <li><a href="<%= anios_alumnos_path(:seccion_id => 0) %>">Asignar alumnos a secciones</a></li>
       <% end %>
