--- a/app/views/secciones/new.html.erb
+++ b/app/views/secciones/new.html.erb
@@ -1,6 +1,6 @@
 <div data-role="header">
-  <h1>Crear seccion</h1>
-  <%= link_to 'Regresar', secciones_path, "data-icon" => "back", "class" => "ui-btn-left", "data-mini" => "true" %>
+  <h1>Nueva seccion</h1>
+  <%= link_to 'Regresar', @grado %>
 </div>
 
 <%= render 'form' %>
