--- a/app/views/secciones/show.html.erb
+++ b/app/views/secciones/show.html.erb
@@ -1,16 +1,9 @@
 <div id='seccion' data-role="header">
-  <h1>Detalles</h1>
-  <%= link_to 'Aceptar', secciones_path, "data-icon" => "check", "data-mini" => "true"  %>
+  <h2><%= "Seccion" %></h2>  
+  <%= link_to 'Aceptar', @grado %>
 </div>
 
-<div data-role="content" style="clear: left">
-  <% grado = Grado.find(@seccion.grado_id) %>
-  <b>Grado:</b> <%= "#{grado.grado} #{grado.nivel_desc}" %> <p>
-  <b>Seccion:</b> <%= @seccion.seccion %> <p>
-</div>
-
-<div data-role="footer">
-  <% if can? :update, @seccion %>
-    <%= link_to 'Editar', edit_seccion_path(@seccion), "class" => "ui-btn-left", "data-inline" => "true", "data-theme" => "a", "data-icon" => "gear", "data-mini" => "true" %>
-  <% end %>
+<div data-role="content">
+  <b>Seccion:</b>
+  <%= @seccion.seccion %> <p>
 </div>
