--- a/app/views/alumnos/_persona_vinculada_fields.html.erb
+++ b/app/views/alumnos/_persona_vinculada_fields.html.erb
@@ -45,5 +45,5 @@
   </div>
 
     <div>
-      <%= f.link_to_remove "Eliminar vinculo", "data-role" => "button", "data-inline" => "true", "data-theme" => "b", "data-icon" => "delete", "data-mini" => "true" %>
+      <%= f.link_to_remove "Eliminar persona", "data-role" => "button", "data-inline" => "true", "data-theme" => "b", "data-icon" => "delete", "data-mini" => "true" %>
     </div>
